--- a/src/partials/header-content.hbs
+++ b/src/partials/header-content.hbs
@@ -29,14 +29,14 @@
               href="{{{relativize (resolvePageURL 'evident-stack-docs::home.adoc')}}}"><p class="pb-4">Home</p></a>
           </li>
           <li class="navbar-item lg:mr-8">
-            <a id="evidentStackUserGuide" class="navbar-link border-0 box-border lg:border-b-2 lg:border-white mx-0 text-sm whitespace-nowrap text-body-1 hover:text-secondary transition duration-300 ease-in-out inline-flex no-underline"
+            <a id="evidentDesignkUserGuide" class="navbar-link border-0 box-border lg:border-b-2 lg:border-white mx-0 text-sm whitespace-nowrap text-body-1 hover:text-secondary transition duration-300 ease-in-out inline-flex no-underline"
               href="{{{relativize (resolvePageURL 'evident-stack-docs::index.adoc')}}}">
               <p class="pb-4">Evident Design User Guide</p></a>
           </li>
         </ul>
         <div style="padding-bottom: 10px;" class="hidden lg:flex items-center lg:ml-12">
-            <a href="https://app.evidentstack.com/sign-in" target="_blank" class="text-sm whitespace-nowrap text-body-1 hover:text-secondary mr-8 transition duration-300 ease-in-out inline-flex no-underline">Log In</a>
-            <a href="https://app.evidentstack.com/sign-up" target="_blank" class="h-[30px] font-primary font-medium rounded uppercase ring-1 h-auto min-h-0 transition duration-200 ease-in text-white hover:text-white bg-gradient-to-t from-stack-brand-700 via-stack-brand-500 to-stack-brand-300 hover:to-stack-brand-700 hover:via-stack-brand-700 hover:from-stack-brand-700 ring-stack-brand-500 px-4 py-1.5 text-xs brandDesignPrimary flex items-center">Sign Up
+            <a href="https://app.evidentstack.com/" target="_blank" class="text-sm whitespace-nowrap text-body-1 hover:text-secondary mr-8 transition duration-300 ease-in-out inline-flex no-underline">Log In</a>
+            <a href="https://app.evidentstack.com/auth/sign-in" target="_blank" class="h-[30px] font-primary font-medium rounded uppercase ring-1 h-auto min-h-0 transition duration-200 ease-in text-white hover:text-white bg-gradient-to-t from-stack-brand-700 via-stack-brand-500 to-stack-brand-300 hover:to-stack-brand-700 hover:via-stack-brand-700 hover:from-stack-brand-700 ring-stack-brand-500 px-4 py-1.5 text-xs brandDesignPrimary flex items-center">Sign Up
                 <span class="ml-1"><svg height="8.083" viewBox="0 0 4.975 8.083" width="4.975" xmlns="http://www.w3.org/2000/svg"><path d="m1500 413.262-4-4 .836-.836 3.164 3.164 3.164-3.164.836.836z" fill="#FFFFFF" transform="matrix(-.017 -1 1 -.017 -382.116 1510.983)"/></svg></span>
             </a>
         </div>
