--- a/src/partials/body-home.hbs
+++ b/src/partials/body-home.hbs
@@ -7,7 +7,7 @@
 <div class="home">
     <main class="container h-screen lg:max-w-[1280px] mx-auto h-auto relative py-16">
         <div class="px-4">
-            <h1 class="text-center pb-4 leading-[1.27]">Welcome to <span class="text-transparent bg-clip-text bg-gradient-to-b from-stack-brand-700 via-stack-brand-500 to-stack-brand-300">Evident Stack</span> documentation</h1>
+            <h1 class="text-center font-bold pb-4 leading-[1.27]">Welcome to <span class="text-transparent bg-clip-text bg-gradient-to-b from-stack-brand-700 via-stack-brand-500 to-stack-brand-300">Evident Stack</span> documentation</h1>
             <p class="text-center text-body-1 text-[18px]">To get started, take the <a class="no-underline text-secondary hover:text-body-4 transform duration-300 ease-in-out" href="{{{relativize (resolvePageURL 'ui-tour.adoc')}}}">comprehensive tour</a>.</p>
         </div>
         <div class="my-16">
